--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@
 #
 
 AC_PREREQ(2.2)
-AC_INIT([juise], [0.0.3], [phil@juniper.net])
+AC_INIT([juise], [0.0.5], [phil@juniper.net])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 LT_INIT([])
 AC_DISABLE_SHARED
@@ -397,5 +397,6 @@ AC_CONFIG_FILES([
   libjuise/juiseconfig.h
   libjuise/Makefile
   juise/Makefile
+  juise-askpass/Makefile
 ])
 AC_OUTPUT
