checkpoint: cgi parameters are working

--- a/juise-askpass/Makefile.in
+++ b/juise-askpass/Makefile.in
@@ -138,6 +138,7 @@ JUISE_INCLUDEDIR = @JUISE_INCLUDEDIR@
 JUISE_LIBDIR = @JUISE_LIBDIR@
 JUISE_LIBS = @JUISE_LIBS@
 JUISE_LIBTOOLLIBS = @JUISE_LIBTOOLLIBS@
+JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
 JUISE_SRCDIR = @JUISE_SRCDIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
