--- a/juise/Makefile.am
+++ b/juise/Makefile.am
@@ -25,7 +25,9 @@ if JUISE_DEBUG
 AM_CFLAGS += -g -DJUISE_DEBUG
 endif
 
-AM_CFLAGS += -DJUISE_DIR=\"${JUISE_DIR}\"
+AM_CFLAGS += \
+ -DJUISE_DIR=\"${JUISE_DIR}\" \
+ -DJUISE_SCRIPT_DIR=\"${JUISE_SCRIPT_DIR}\"
 
 if HAVE_READLINE
 LIBS += -lreadline
