--- a/juise-askpass/Makefile.in
+++ b/juise-askpass/Makefile.in
@@ -165,6 +165,9 @@ LIBXSLT_CFLAGS = @LIBXSLT_CFLAGS@
 LIBXSLT_LIBS = @LIBXSLT_LIBS@
 LIBXSLT_REQUIRED_VERSION = @LIBXSLT_REQUIRED_VERSION@
 LIBXSLT_SRC = @LIBXSLT_SRC@
+LIGHTTPD_MOD = @LIGHTTPD_MOD@
+LIGHTTPD_OBJ = @LIGHTTPD_OBJ@
+LIGHTTPD_SRC = @LIGHTTPD_SRC@
 LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
@@ -189,6 +192,9 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_GZIP = @PATH_GZIP@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PATH_SSH = @PATH_SSH@
+PCRECONFIG = @PCRECONFIG@
+PCRE_CFLAGS = @PCRE_CFLAGS@
+PCRE_LIB = @PCRE_LIB@
 RANLIB = @RANLIB@
 RELDATE = @RELDATE@
 RM = @RM@
