--- a/juise/Makefile.am
+++ b/juise/Makefile.am
@@ -42,3 +42,10 @@ juise_LDFLAGS = -static
 man_MANS = juise.1x
 
 EXTRA_DIST = juise.1x
+
+install-exec-hook:
+	cd $(DESTDIR)$(bindir) && \
+	    ( for file in juise.cgi juise.fastcgi xml-mode ; do \
+		mv -f $$file$(EXEEXT) $$file$(EXEEXT).old ; \
+		$(LN_S) juise$(EXEEXT) $$file$(EXEEXT) ; \
+	    done )
