start of curl integration

--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,7 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 LIBXML_REQUIRED_VERSION=2.7.7
 LIBXSLT_REQUIRED_VERSION=1.1.26
 LIBSLAX_REQUIRED_VERSION=0.8.0
+LIBCURL_REQUIRED_VERSION=7.21.6
 
 AC_PROG_CC
 AC_PROG_INSTALL
@@ -90,7 +91,7 @@ dnl Some packages need to be checked against version numbers so we
 dnl define a function here for later use
 dnl
 AC_DEFUN([VERSION_TO_NUMBER],
-[`$1 | sed -e 's/libxml //' | awk 'BEGIN { FS = "."; } { printf "%d", ([$]1 * 1000 + [$]2) * 1000 + [$]3;}'`])
+[`$1 | sed -e 's/lib.* //' | awk 'BEGIN { FS = "."; } { printf "%d", ([$]1 * 1000 + [$]2) * 1000 + [$]3;}'`])
 
 AC_MSG_CHECKING([whether to build with debugging])
 AC_ARG_ENABLE([debug],
@@ -175,7 +176,7 @@ dnl make sure xml2-config is executable,
 dnl test version and init our variables
 dnl
 
-if ${XML_CONFIG} --libs print > /dev/null 2>&1
+if ${XML_CONFIG} --libs > /dev/null 2>&1
 then
 	XMLVERS=`$XML_CONFIG --version`
 	if test VERSION_TO_NUMBER(echo $XMLVERS) -ge VERSION_TO_NUMBER(echo $LIBXML_REQUIRED_VERSION)
@@ -242,7 +243,7 @@ dnl make sure xslt-config is executable,
 dnl test version and init our variables
 dnl
 
-if ${XSLT_CONFIG} --libs print > /dev/null 2>&1
+if ${XSLT_CONFIG} --libs > /dev/null 2>&1
 then
 	XSLTVERS=`$XSLT_CONFIG --version`
 	if test VERSION_TO_NUMBER(echo $XSLTVERS) -ge VERSION_TO_NUMBER(echo $LIBXSLT_REQUIRED_VERSION)
@@ -309,7 +310,7 @@ dnl make sure slax-config is executable,
 dnl test version and init our variables
 dnl
 
-if ${SLAX_CONFIG} --libs print > /dev/null 2>&1
+if ${SLAX_CONFIG} --libs > /dev/null 2>&1
 then
 	SLAXVERS=`$SLAX_CONFIG --version`
 	if test VERSION_TO_NUMBER(echo $SLAXVERS) -ge VERSION_TO_NUMBER(echo $LIBSLAX_REQUIRED_VERSION)
@@ -318,7 +319,7 @@ then
 		LIBSLAX_CFLAGS="$LIBSLAX_CFLAGS `$SLAX_CONFIG --cflags`"
 		AC_MSG_RESULT($SLAXVERS found)
 	else
-		AC_MSG_ERROR(Version $SLAXVERS found. You need at least libslax $LIBSLAX_REQUIRED_VERSION for this version of libslax)
+		AC_MSG_ERROR(Version $SLAXVERS found. You need at least libslax $LIBSLAX_REQUIRED_VERSION for this version of juise)
 	fi
 else
 	AC_MSG_ERROR([Could not find libslax anywhere, check http://code.google.com/p/libslax.])
@@ -327,6 +328,41 @@ fi
 AC_SUBST(SLAX_CONFIG)
 AC_SUBST(LIBSLAX_CFLAGS)
 AC_SUBST(LIBSLAX_LIBS)
+
+
+
+AC_SUBST(LIBCURL_REQUIRED_VERSION)
+AC_MSG_CHECKING(for libcurl libraries >= $LIBCURL_REQUIRED_VERSION) 
+if test "x$LIBCURL_CONFIG_PREFIX" != "x"
+then
+        CURL_CONFIG=${LIBCURL_CONFIG_PREFIX}/bin/curl-config
+else
+        CURL_CONFIG=curl-config
+fi
+
+dnl
+dnl make sure curl-config is executable,
+dnl test version and init our variables
+dnl
+
+if ${CURL_CONFIG} --libs > /dev/null 2>&1
+then
+	CURLVERS=`$CURL_CONFIG --version`
+	if test VERSION_TO_NUMBER(echo $CURLVERS) -ge VERSION_TO_NUMBER(echo $LIBCURL_REQUIRED_VERSION)
+	then
+		LIBCURL_LIBS="$LIBCURL_LIBS `$CURL_CONFIG --libs`"
+		LIBCURL_CFLAGS="$LIBCURL_CFLAGS `$CURL_CONFIG --cflags`"
+		AC_MSG_RESULT($CURLVERS found)
+	else
+		AC_MSG_ERROR(Version $CURLVERS found. You need at least libcurl $LIBCURL_REQUIRED_VERSION for this version of juise)
+	fi
+else
+	AC_MSG_ERROR([Could not find libcurl anywhere, check http://curl.haxx.se])
+fi
+
+AC_SUBST(CURL_CONFIG)
+AC_SUBST(LIBCURL_CFLAGS)
+AC_SUBST(LIBCURL_LIBS)
 
 
 
@@ -476,13 +512,16 @@ AC_MSG_NOTICE([summary of build options:
   libslax version:  ${SLAXVERS}
   libslax cflags:   ${LIBSLAX_CFLAGS}
   libslax libs:     ${LIBSLAX_LIBS}
+  libcurl version:  ${CURLVERS}
+  libcurl cflags:   ${LIBCURL_CFLAGS}
+  libcurl libs:     ${LIBCURL_LIBS}
   libpcre cflags:   ${PCRE_CFLAGS}
   libpcre libs:     ${PCRE_LIB}
   lighttpd src:     ${LIGHTTPD_SRC}
   lighttpd obj:     ${LIGHTTPD_OBJ}
   lighttpd modules: ${LIGHTTPD_MOD}
 
-  debug:            ${SLAX_DEBUG:-no}
+  debug:            ${JUISE_DEBUG:-no}
   readline:         ${HAVE_READLINE:-no}
   printf-like:      ${HAVE_PRINTFLIKE:-no}
 ])
