add <verbose> param (memdump data); fix buffer off-by-one issue; fix placement of handle_clean call; fix duplicate header fields

--- a/libjuise/Makefile.am
+++ b/libjuise/Makefile.am
@@ -31,6 +31,7 @@ noinst_HEADERS = \
     io/fbuf.h \
     io/filecopy.h \
     io/logging.h \
+    io/memdump.h \
     io/pid_lock.h \
     io/rotate_log.h \
     io/trace.h \
@@ -59,6 +60,7 @@ libjuise_la_SOURCES = \
     io/fbuf.c \
     io/trace.c \
     io/logging.c \
+    io/memdump.c \
     io/rotate_log.c \
     xml/extensions.c \
     xml/jsio.c \
