--- a/extensions/curl/Makefile.in
+++ b/extensions/curl/Makefile.in
@@ -132,7 +132,9 @@ CHMOD = @CHMOD@
 CP = @CP@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
+CURL_CFLAGS = @CURL_CFLAGS@
 CURL_CONFIG = @CURL_CONFIG@
+CURL_LIBS = @CURL_LIBS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
@@ -162,14 +164,19 @@ JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
 JUISE_SRCDIR = @JUISE_SRCDIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
-LIBCURL_CFLAGS = @LIBCURL_CFLAGS@
-LIBCURL_LIBS = @LIBCURL_LIBS@
 LIBCURL_REQUIRED_VERSION = @LIBCURL_REQUIRED_VERSION@
 LIBJUISE_VERSION = @LIBJUISE_VERSION@
 LIBJUISE_VERSION_EXTRA = @LIBJUISE_VERSION_EXTRA@
 LIBJUISE_VERSION_NUMBER = @LIBJUISE_VERSION_NUMBER@
 LIBOBJS = @LIBOBJS@
-LIBS = ${LIBXSLT_LIBS} -lexslt ${LIBXML_LIBS} -L${SLAX_LIBDIR} -lslax
+LIBS = \
+    ${LIBXSLT_LIBS} \
+    -lexslt \
+    ${LIBXML_LIBS} \
+    ${CURL_LIBS} \
+    -L../../libjuise -ljuise \
+    -L${SLAX_LIBDIR} -lslax
+
 LIBSLAX_CFLAGS = @LIBSLAX_CFLAGS@
 LIBSLAX_LIBS = @LIBSLAX_LIBS@
 LIBSLAX_REQUIRED_VERSION = @LIBSLAX_REQUIRED_VERSION@
@@ -604,11 +611,11 @@ uninstall-am: uninstall-libLTLIBRARIES
 include ${top_srcdir}/warnings.mk
 
 install-exec-hook:
-	@DLNAME=`sh -c '. libcurl.la ; echo $$dlname'` \
-		&& echo Install link $$DLNAME "->" ${UGLY_NAME} "..." \
-	        && cd ${SLAX_EXTDIR} \
-	        && rm -f ${UGLY_NAME} \
-		&& ${LN_S} $$DLNAME ${UGLY_NAME}
+	@DLNAME=`sh -c '. ${libdir}/libcurl.la ; echo $$dlname'`; \
+                    echo Install link $$DLNAME "->" ${UGLY_NAME} "..." \
+                    && cd ${SLAX_EXTDIR} \
+	            && rm -f ${UGLY_NAME} \
+		    && ${LN_S} $$DLNAME ${UGLY_NAME}
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
