cgi fixes, <cgi> element, and a first attempt at docs

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = libjuise juise juise-askpass extensions
+SUBDIRS = libjuise juise juise-askpass extensions doc
 
 if HAVE_LIGHTTPD
 SUBDIRS += mod_juise
