--- a/web/Makefile.in
+++ b/web/Makefile.in
@@ -225,6 +225,32 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 CLEANFILES = lighttpd.conf
+EXTRA_DIST = \
+    Makefile.am \
+    Makefile.in \
+    bin/cmd.slax \
+    favicon.ico \
+    icons/button-add.png \
+    icons/button-clean.png \
+    icons/button-delete.png \
+    icons/button-hide.png \
+    icons/button-keeper.png \
+    icons/button-pulldown.png \
+    icons/button-reload.png \
+    icons/button-remove.png \
+    icons/button-stop.png \
+    icons/button-unhide.png \
+    icons/loading.png \
+    images/logo.png \
+    jquery/jquery-ui.js \
+    jquery/jquery-ui.min.js \
+    jquery/jquery.js \
+    jquery/jquery.min.js \
+    lighttpd.conf.in \
+    static/cli-test.html \
+    static/cmd.css \
+    static/drag-test.html
+
 all: all-am
 
 .SUFFIXES:
