--- a/web/Makefile.in
+++ b/web/Makefile.in
@@ -18,6 +18,8 @@
 #
 # $Id$
 #
+
+# CLEANFILES = lighttpd.conf
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -224,7 +226,6 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-CLEANFILES = lighttpd.conf
 EXTRA_DIST = \
     Makefile.am \
     Makefile.in \
@@ -351,7 +352,6 @@ install-strip:
 mostlyclean-generic:
 
 clean-generic:
-	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
